--- a/components.ipynb
+++ b/components.ipynb
@@ -21,16 +21,8 @@
    "source": [
     "\n",
     "# read the four datasets\n",
-    "league_df = pd.read_csv(\"data/league_data.csv\")\n",
-    "team_df = pd.read_csv(\"data/team_data.csv\")\n",
-    "social_df = pd.read_csv(\"data/social_data.csv\")\n",
-    "team_df = pd.read_csv(\"data/team_data.csv\")\n",
-    "\n",
-    "# set the league_df SeasonStart,SeasonEnd,PlayoffStart,PlayoffEnd to datetime\n",
-    "league_df['SeasonStart'] = pd.to_datetime(league_df['SeasonStart'])\n",
-    "league_df['SeasonEnd'] = pd.to_datetime(league_df['SeasonEnd'])\n",
-    "league_df['PlayoffStart'] = pd.to_datetime(league_df['PlayoffStart'])\n",
-    "league_df['PlayoffEnd'] = pd.to_datetime(league_df['PlayoffEnd'])"
+    "league_df = pd.read_csv(\"data/league_data.csv\", parse_dates=True)\n",
+    "team_df = pd.read_csv(\"data/team_data.csv\", parse_dates=True)"
    ]
   },
   {
