--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -16,18 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +38,14 @@
     "    \"StadiumCapacity\",\n",
     "    \"HomeGames\",\n",
     "    \"TeamSalary\",\n",
-    "    \"TeamPlayers\"\n",
-    "]\n",
-    "\n",
-    "loc_cols = [\n",
+    "    \"TeamRevenue\",\n",
+    "    \"TeamPlayers\",\n",
     "    \"TeamCity\",\n",
     "    \"TeamState\",\n",
     "    \"TeamLocationLat\",\n",
     "    \"TeamLocationLong\",\n",
+    "    \"IGFollowers\",\n",
+    "    \"XFollowers\",\n",
     "]\n",
     "\n",
     "league_cols = [\n",
@@ -58,19 +56,7 @@
     "    \"PlayoffStart\",\n",
     "    \"PlayoffEnd\",\n",
     "    \"SalaryCap\",\n",
-    "]\n",
-    "\n",
-    "social_cols = [\n",
-    "    \"TeamName\",\n",
-    "    \"IGFollowers\",\n",
-    "    \"XFollowers\",\n",
-    "]\n",
-    "\n",
-    "# initialize the dataframes\n",
-    "team_df = pd.DataFrame(columns=team_cols)\n",
-    "loc_df = pd.DataFrame(columns=loc_cols)\n",
-    "league_df = pd.DataFrame(columns=league_cols)\n",
-    "social_df = pd.DataFrame(columns=social_cols)"
+    "]"
    ]
   },
   {
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +110,16 @@
     "    'Latitude': 'TeamLocationLat',\n",
     "    'Longitude': 'TeamLocationLong'\n",
     "})\n",
+    "\n",
+    "# strip \\ufeff from the beginning of the team location lat\n",
+    "nba_teams['TeamLocationLat'] = nba_teams['TeamLocationLat'].str.replace('\\ufeff', '')\n",
+    "\n",
+    "# type Lat and Long as float\n",
+    "nba_teams['TeamLocationLat'] = nba_teams['TeamLocationLat'].astype(float)\n",
+    "nba_teams['TeamLocationLong'] = nba_teams['TeamLocationLong'].astype(float)\n",
+    "\n",
+    "# convert all long values to negative\n",
+    "nba_teams['TeamLocationLong'] = nba_teams['TeamLocationLong'] * -1\n",
     "\n",
     "# drop location\n",
     "nba_teams = nba_teams.drop(['Location'], axis=1)\n",
@@ -233,7 +229,60 @@
     "\n",
     "# add the social data to the team data\n",
     "nba_teams['IGFollowers'] = nba_teams['TeamName'].map(IGFollowers)\n",
-    "nba_teams['XFollowers'] = nba_teams['TeamName'].map(XFollowers)"
+    "nba_teams['XFollowers'] = nba_teams['TeamName'].map(XFollowers)\n",
+    "\n",
+    "# add a dictionary for revenue\n",
+    "TeamRevenue = {\n",
+    "    \"Golden State Warriors\": 765000000,\n",
+    "    \"Los Angeles Lakers\": 516000000,\n",
+    "    \"New York Knicks\": 504000000,\n",
+    "    \"Boston Celtics\": 443000000,\n",
+    "    \"Dallas Mavericks\": 429000000,\n",
+    "    \"Los Angeles Clippers\": 425000000,\n",
+    "    \"Houston Rockets\": 381000000,\n",
+    "    \"Chicago Bulls\": 372000000,\n",
+    "    \"Philadelphia 76ers\": 371000000,\n",
+    "    \"Miami Heat\": 371000000,\n",
+    "    \"Brooklyn Nets\": 367000000,\n",
+    "    \"Phoenix Suns\": 366000000,\n",
+    "    \"Denver Nuggets\": 348000000,\n",
+    "    \"Cleveland Cavaliers\": 348000000,\n",
+    "    \"Milwaukee Bucks\": 329000000,\n",
+    "    \"Atlanta Hawks\": 326000000,\n",
+    "    \"Washington Wizards\": 323000000,\n",
+    "    \"San Antonio Spurs\": 319000000,\n",
+    "    \"Toronto Raptors\": 305000000,\n",
+    "    \"Portland Trail Blazers\": 300000000,\n",
+    "    \"Sacramento Kings\": 289000000,\n",
+    "    \"Utah Jazz\": 274000000,\n",
+    "    \"Detroit Pistons\": 274000000,\n",
+    "    \"Charlotte Hornets\": 269000000,\n",
+    "    \"Oklahoma City Thunder\": 267000000,\n",
+    "    \"Indiana Pacers\": 263000000,\n",
+    "    \"New Orleans Pelicans\": 262000000,\n",
+    "    \"Orlando Magic\": 261000000,\n",
+    "    \"Minnesota Timberwolves\": 259000000,\n",
+    "    \"Memphis Grizzlies\": 258000000,\n",
+    "}\n",
+    "\n",
+    "assert len(TeamRevenue) == 30\n",
+    "\n",
+    "# add the revenue data to the team data\n",
+    "nba_teams['TeamRevenue'] = nba_teams['TeamName'].map(TeamRevenue)\n",
+    "\n",
+    "# fix dtypes\n",
+    "nba_teams['SeasonStart'] = pd.to_datetime(nba_teams['SeasonStart'])\n",
+    "nba_teams['SeasonEnd'] = pd.to_datetime(nba_teams['SeasonEnd'])\n",
+    "nba_teams['PlayoffStart'] = pd.to_datetime(nba_teams['PlayoffStart'])\n",
+    "nba_teams['PlayoffEnd'] = pd.to_datetime(nba_teams['PlayoffEnd'])\n",
+    "nba_teams['HomeGames'] = nba_teams['HomeGames'].astype(int)\n",
+    "nba_teams['StadiumCapacity'] = nba_teams['StadiumCapacity'].astype(int)\n",
+    "nba_teams['SalaryCap'] = nba_teams['SalaryCap'].astype(int)\n",
+    "nba_teams['TeamSalary'] = nba_teams['TeamSalary'].str.replace('$', '').str.replace(',', '').astype(int)\n",
+    "nba_teams['TeamRevenue'] = nba_teams['TeamRevenue'].astype(int)\n",
+    "nba_teams['TeamPlayers'] = nba_teams['TeamPlayers'].astype(int)\n",
+    "nba_teams['IGFollowers'] = nba_teams['IGFollowers'].astype(int)\n",
+    "nba_teams['XFollowers'] = nba_teams['XFollowers'].astype(int)"
    ]
   },
   {
@@ -245,45 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add the data to the corresponding dataframe\n",
-    "team_df = pd.concat(\n",
-    "    [\n",
-    "        team_df,\n",
-    "        nba_teams[team_cols]\n",
-    "    ]\n",
-    ")\n",
+    "team_df = nba_teams[team_cols].copy()\n",
     "\n",
-    "loc_df = pd.concat(\n",
-    "    [\n",
-    "        loc_df,\n",
-    "        nba_teams[loc_cols]\n",
-    "    ]\n",
-    ")\n",
+    "# add total followers\n",
+    "team_df['TotalFollowers'] = team_df['IGFollowers'] + team_df['XFollowers']\n",
     "\n",
-    "league_df = pd.concat(\n",
-    "    [\n",
-    "        league_df,\n",
-    "        nba_teams[league_cols]\n",
-    "    ]\n",
-    ")\n",
+    "# # add revenue per follower, revenue per game, revenue per player, and salary per player\n",
+    "team_df[\"RevPerFollower\"] = team_df[\"TeamRevenue\"] / team_df[\"TotalFollowers\"]\n",
+    "team_df[\"RevPerGame\"] = team_df[\"TeamRevenue\"] / team_df[\"HomeGames\"]\n",
+    "team_df[\"RevPerPlayer\"] = team_df[\"TeamRevenue\"] / team_df[\"TeamPlayers\"]\n",
+    "team_df[\"SalaryPerPlayer\"] = team_df[\"TeamSalary\"] / team_df[\"TeamPlayers\"]\n",
+    "\n",
+    "league_df = nba_teams[league_cols].copy()\n",
     "\n",
     "league_df = league_df.drop_duplicates()\n",
     "league_df[\"LeagueXFollowers\"] = 44570000\n",
     "league_df[\"LeagueIGFollowers\"] = 86300000\n",
+    "league_df[\"LeagueRevenue\"] = 10580000000\n",
+    "league_df[\"LeaguePlayers\"] = 450\n",
+    "league_df[\"LeagueSalary\"] = 6120000000\n",
+    "league_df[\"LeagueTotalFollowers\"] = league_df[\"LeagueXFollowers\"] + league_df[\"LeagueIGFollowers\"]\n",
     "\n",
-    "social_df = pd.concat(\n",
-    "    [\n",
-    "        social_df,\n",
-    "        nba_teams[social_cols]\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "social_df[\"IGDate\"] = \"2023-03-01\"\n",
-    "social_df[\"XDate\"] = \"2023-10-01\"\n",
+    "league_df[\"IGDate\"] = \"2023-03-01\"\n",
+    "league_df[\"XDate\"] = \"2023-10-01\"\n",
     "    \n"
    ]
   },
@@ -296,18 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_switch = False\n",
+    "save_switch = True\n",
     "assert save_switch == True\n",
     "\n",
     "# save the four dataframes\n",
     "team_df.to_csv('data/team_data.csv', index=False)\n",
-    "loc_df.to_csv('data/loc_data.csv', index=False)\n",
-    "league_df.to_csv('data/league_data.csv', index=False)\n",
-    "social_df.to_csv('data/social_data.csv', index=False)"
+    "league_df.to_csv('data/league_data.csv', index=False)"
    ]
   },
   {
